[package]
name = "bunker-ng"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "BunkerNet NG - Desktop p2p node based on BunkerNet"
readme = "../README.md"

[features]
console = ["bunker-ng-core/console"]

[dependencies]
bunker-ng-core.workspace = true
workflow-log.workspace = true
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bunkernet-alloc.workspace = true
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
