[package]
name = "bunker-ng-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Core framework for BunkerNet NG"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]

[features]
console = []
browser-extension = ["lean"]
mobile = ["lean"]
lean = []
cli = []
default = []

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitcl", "rustc", "cargo"] }

[dependencies]
bunkernet-addresses.workspace = true
bunkernet-bip32.workspace = true
bunkernet-cli.workspace = true
bunkernet-consensus-core.workspace = true
bunkernet-core.workspace = true
bunkernet-metrics-core.workspace = true
bunker-ng-macros.workspace = true
bunkernet-notify.workspace = true
bunkernet-rpc-core.workspace = true
bunkernet-utils.workspace = true
bunkernet-wallet-core.workspace = true
bunkernet-wallet-keys.workspace = true
bunkernet-wrpc-client.workspace = true
bunkernet-txscript.workspace = true

workflow-core.workspace = true
workflow-i18n.workspace = true
workflow-dom.workspace = true
workflow-http.workspace = true
workflow-log.workspace = true
workflow-store.workspace = true
workflow-wasm.workspace = true
chrome-sys.workspace = true

ahash.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
convert_case.workspace = true
derivative.workspace = true
downcast-rs.workspace = true
downcast.workspace = true
futures-util.workspace = true
futures.workspace = true
image.workspace = true
js-sys.workspace = true
log.workspace = true
pad.workspace = true
passwords.workspace = true
qrcode.workspace = true
rand.workspace = true
rfd.workspace = true
ritehash.workspace = true
separator.workspace = true
serde_json.workspace = true
serde.workspace = true
slug.workspace = true
smallvec.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
xxhash-rust.workspace = true
zeroize.workspace = true

egui.workspace = true
epaint.workspace = true
egui_plot.workspace = true
egui_extras.workspace = true
chrono.workspace = true

egui-phosphor = { workspace = true, features = ["light"] }
egui-notify.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Document',
    'VisibilityState',
    'Window',
    'Element',
]


# -- native
[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
bunkernet-core.workspace = true
bunkernet-rpc-service.workspace = true
bunkernet-wrpc-server.workspace = true
bunkerd.workspace = true
num_cpus.workspace = true
open.workspace = true
rlimit.workspace = true
sysinfo.workspace = true
tokio.workspace = true

# -- web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { workspace = true,  default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { workspace = true, default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland"
] }
